Added functionality to present scraped t-codes from static website

--- a/window.html
+++ b/window.html
@@ -5,6 +5,12 @@
     <script src="background.js"></script>
 </head>
 
+<script> 
+    function highlight(){
+        console.log("In highlight function");
+    }
+</script>
+
 <body>
     <button type="button" class="btn btn-warning" onclick="highlight()">Highlight T-Codes</button>
 </body>
