--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 });
         }
 
-    </script> -->
-    <script type="module" src="src/app.js"></script>
+    </script> 
+    <script type="module" src="src/app.js"></script>-->
 </body>
 
 </html>
