Updated to manifest v3 and still works

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <div id="feed"></div>
-
-    <!--<script>
+    <!--<button type="button" onclick="highlightTCodes()">Click me to highlight T-Codes!</button>
+    <script>
         function highlightTCodes(element) {
             var newText = $("p").text().split(" ").join("</span> <span>");
             newText = "<span>" + newText + "</span>";
